fix: fix linting & format errors

--- a/packages/elements/.eslintrc.json
+++ b/packages/elements/.eslintrc.json
@@ -8,6 +8,7 @@
   "plugins": ["eslint-plugin-no-null"],
   "rules": {
     "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/unbound-method": "error",
     "comma-dangle": "off",
