--- a/packages/elements-angular/.eslintrc.json
+++ b/packages/elements-angular/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": ["../../.eslintrc.json"],
-  "ignorePatterns": ["!**/*", "src/generated/**"],
+  "ignorePatterns": ["!**/*", "src/directives/**"],
   "overrides": [
     {
       "files": ["*.ts"],
