fix: make ng-add work with newer angular versions

--- a/packages/elements-angular/project.json
+++ b/packages/elements-angular/project.json
@@ -55,7 +55,8 @@
       "options": {
         "commands": [
           "tsc -p packages/elements-angular/tsconfig.schematics.json --outDir packages/elements-angular/dist/schematics",
-          "shx cp packages/elements-angular/src/schematics/collection.json packages/elements-angular/dist/schematics"
+          "shx cp packages/elements-angular/src/schematics/collection.json packages/elements-angular/dist/schematics",
+          "shx cp packages/elements-angular/src/schematics/add/schema.json packages/elements-angular/dist/schematics/add"
         ],
         "parallel": false
       }
