--- a/packages/landingpage/.env.development
+++ b/packages/landingpage/.env.development
@@ -1,3 +1,3 @@
 ORIGIN=http://localhost:4600
 HOST=$ORIGIN/$BASE_PATH
-NEXT_PUBLIC_STORYBOOK_URL=http://localhost:6006/
+NEXT_PUBLIC_STORYBOOK_URL=http://localhost:6006
