--- a/packages/landingpage/package.json
+++ b/packages/landingpage/package.json
@@ -14,7 +14,7 @@
     "classnames": "^2.3.2",
     "countup.js": "^2.6.0",
     "date-fns": "^2.29.3",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "next": "13.5.1",
     "next-mdx-remote": "^4.2.0",
     "react": "18.2.0",
@@ -27,6 +27,7 @@
     "shiki": "^0.14.5"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "18.8.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "18.0.6",
