--- a/packages/storybook/.eslintrc.json
+++ b/packages/storybook/.eslintrc.json
@@ -1,11 +1,6 @@
 {
-  "extends": [
-    "../../.eslintrc.json",
-    "plugin:storybook/recommended"
-  ],
-  "ignorePatterns": [
-    "!**/*"
-  ],
+  "extends": ["../../.eslintrc.json", "plugin:storybook/recommended"],
+  "ignorePatterns": ["!**/*"],
   "rules": {
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off"
