--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "start:landingpage": "nx run landingpage:start",
     "start:ui-patterns": "nx run ui-patterns:dev",
     "start:ui-patterns-playground": "nx run ui-patterns-playground:start",
-    "build": "nx run-many --target=build --output-style=stream --exclude workspace",
-    "test": "nx run-many --target=test --output-style=stream --configuration=ci --exclude workspace",
+    "build": "nx run-many --target=build --output-style=stream",
+    "test": "nx run-many --target=test --output-style=stream --configuration=ci",
     "test:core:watch": "nx run elements:test:watch",
-    "lint": "nx affected --target=lint --output-style=stream --exclude workspace",
-    "lint:fix": "nx affected --target=lint --configuration=fix --output-style=stream --exclude workspace",
-    "format": "nx format:check --exclude workspace",
-    "format:fix": "nx format:write --exclude workspace",
+    "lint": "nx affected --target=lint --output-style=stream",
+    "lint:fix": "nx affected --target=lint --configuration=fix --output-style=stream",
+    "format": "nx format:check",
+    "format:fix": "nx format:write",
     "qc": "yarn lint && yarn format && yarn build && yarn test",
-    "clean": "nx run-many --target=clean --exclude workspace && shx rm -rf dist",
-    "clean:node-modules": "nx run-many --target=clean --configuration=nodejs --exclude workspace && shx rm -rf node_modules"
+    "clean": "nx run-many --target=clean && shx rm -rf dist",
+    "clean:node-modules": "nx run-many --target=clean --configuration=nodejs && shx rm -rf node_modules"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~15.1.0",
@@ -31,17 +31,18 @@
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
     "@jscutlery/semver": "^4.1.0",
-    "@nx/angular": "17.1.2",
-    "@nx/eslint": "^17.1.2",
-    "@nx/eslint-plugin": "17.1.2",
-    "@nx/storybook": "17.1.2",
+    "@nx/angular": "17.3.0-beta.6",
+    "@nx/eslint": "17.3.0-beta.6",
+    "@nx/eslint-plugin": "17.3.0-beta.6",
+    "@nx/storybook": "17.3.0-beta.6",
     "@types/css-font-loading-module": "^0.0.7",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "26.0.24",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
+    "@typescript-eslint/eslint-plugin": "6.13.2",
+    "@typescript-eslint/parser": "6.13.2",
     "camelcase": "^6.2.0",
     "chalk": "^4.1.2",
+    "conventional-recommended-bump": "^9.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
@@ -55,13 +56,14 @@
     "lerna": "^5.5.2",
     "lint-staged": "^10.5.3",
     "ng-packagr": "~15.1.0",
-    "nx": "17.1.2",
+    "nx": "17.3.0-beta.6",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
     "prettier": "^2.1.2",
     "prompts": "^2.4.0",
+    "semver": "^7.5.4",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "svgo": "^2.8.0",
@@ -100,3 +102,4 @@
     ]
   }
 }
+
