--- a/project.json
+++ b/project.json
@@ -2,55 +2,27 @@
   "name": "workspace",
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "targets": {
-    "version": {
-      "executor": "@jscutlery/semver:version",
+    "publish": {
+      "executor": "nx:run-commands",
+      "dependsOn": ["^build"],
       "options": {
-        "syncVersions": true,
-        "skipProjectChangelog": true,
-        "dryRun": false,
-        "push": false,
-        "commitMessageFormat": "chore: publish {version}",
-        "postTargets": ["deploy-npm", "deploy-github"]
+        "command": "node ./scripts/publish.js dryRun={args.dryRun} canary={args.canary}"
       },
       "configurations": {
-        "prerelease": {
-          "releaseAs": "prerelease",
-          "skipRootChangelog": true,
-          "postTargets": ["deploy-npm"],
-          "push": false
+        "canary": {
+          "args": "canary=true"
+        },
+        "dryRun": {
+          "args": "dryRun=true"
         }
-      }
-    },
-    "deploy-npm": {
-      "executor": "nx:run-commands",
-      "dependsOn": [
-        {
-          "projects": [
-            "elements",
-            "elements-angular",
-            "elements-react",
-            "elements-vue"
-          ],
-          "target": "build"
-        }
-      ],
-      "options": {
-        "commands": [
-          "npm publish -w packages/elements",
-          "npm publish -w packages/elements-angular",
-          "npm publish -w packages/elements-react",
-          "npm publish -w packages/elements-vue"
-        ],
-        "parallel": false
-      }
-    },
-    "deploy-github": {
-      "executor": "@jscutlery/semver:github",
-      "options": {
-        "tag": "{tag}",
-        "notes": "{notes}"
       }
     }
   },
+  "implicitDependencies": [
+    "elements",
+    "elements-angular",
+    "elements-react",
+    "elements-vue"
+  ],
   "tags": []
 }
