--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@angular/cli": "~15.1.0",
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
-    "@jscutlery/semver": "^4.1.0",
     "@nx/angular": "17.3.0-beta.6",
     "@nx/eslint": "17.3.0-beta.6",
     "@nx/eslint-plugin": "17.3.0-beta.6",
@@ -42,6 +41,7 @@
     "@typescript-eslint/parser": "6.13.2",
     "camelcase": "^6.2.0",
     "chalk": "^4.1.2",
+    "conventional-changelog-angular": "^7.0.0",
     "conventional-recommended-bump": "^9.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.51.0",
