--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -15,6 +15,8 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # needed for GitHub releases
     if: github.ref == 'refs/heads/master' || inputs.configuration == 'dryRun'
     steps:
       - name: Checkout repository
@@ -39,9 +41,7 @@ jobs:
         run: yarn run nx run-many -t build -p elements,elements-angular,elements-react,elements-vue
       - name: Version and Release
         shell: bash
-        run: |
-          yarn nx run workspace:release:${{ inputs.configuration }}
-          [[ ${{ inputs.configuration }} == 'dryRun' ]] && yarn nx run workspace:publish --dryRun
+        run: yarn nx run workspace:release:${{ inputs.configuration }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
