--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "start:landingpage": "nx run landingpage:start",
     "start:ui-patterns": "nx run ui-patterns:dev",
     "start:ui-patterns-playground": "nx run ui-patterns-playground:start",
-    "build": "nx run-many --target=build --output-style=stream",
-    "test": "nx run-many --target=test --output-style=stream --configuration=ci",
+    "build": "nx run-many --target=build --output-style=stream --exclude workspace",
+    "test": "nx run-many --target=test --output-style=stream --configuration=ci --exclude workspace",
     "test:core:watch": "nx run elements:test:watch",
-    "lint": "nx affected --target=lint --output-style=stream",
-    "lint:fix": "nx affected --target=lint --configuration=fix --output-style=stream",
-    "format": "nx format:check",
-    "format:fix": "nx format:write",
+    "lint": "nx affected --target=lint --output-style=stream --exclude workspace",
+    "lint:fix": "nx affected --target=lint --configuration=fix --output-style=stream --exclude workspace",
+    "format": "nx format:check --exclude workspace",
+    "format:fix": "nx format:write --exclude workspace",
     "qc": "yarn lint && yarn format && yarn build && yarn test",
-    "clean": "nx run-many --target=clean && shx rm -rf dist",
-    "clean:node-modules": "nx run-many --target=clean --configuration=nodejs && shx rm -rf node_modules"
+    "clean": "nx run-many --target=clean --exclude workspace && shx rm -rf dist",
+    "clean:node-modules": "nx run-many --target=clean --configuration=nodejs --exclude workspace && shx rm -rf node_modules"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~15.1.0",
@@ -102,4 +102,3 @@
     ]
   }
 }
-
