refactor release script; fix changelog creation for non-prerelease

--- a/nx.json
+++ b/nx.json
@@ -58,10 +58,7 @@
       }
     },
     "version": {
-      "generatorOptions": {
-        "specifierSource": "conventional-commits",
-        "currentVersionResolver": "git-tag"
-      }
+      "conventionalCommits": true
     }
   }
 }
