--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "removeComments": false,
-    "resolveJsonModule": true,
+    "resolveJsonModule": true
   },
   "extends": "./tsconfig.base.json"
 }
