solve eslint issues

--- a/packages/elements-angular/.eslintrc.json
+++ b/packages/elements-angular/.eslintrc.json
@@ -10,6 +10,7 @@
       ],
       "rules": {
         "@angular-eslint/directive-selector": "off",
+        "@typescript-eslint/no-explicit-any": "warn",
         "@angular-eslint/component-selector": [
           "error",
           {
