exclude *.e2e.ts files from build

--- a/packages/elements/tsconfig.lib.json
+++ b/packages/elements/tsconfig.lib.json
@@ -4,5 +4,5 @@
     "module": "esnext"
   },
   "include": ["src"],
-  "exclude": ["**/*.spec.ts", "**/*.spec.tsx"]
+  "exclude": ["**/*.spec.ts", "**/*.e2e.ts", "**/*.spec.tsx"]
 }
