--- a/.github/workflows/dependencies-install/action.yml
+++ b/.github/workflows/dependencies-install/action.yml
@@ -5,18 +5,11 @@ author: 'Benjamin Pagelsdorf'
 runs:
   using: "composite"
   steps:
-    - uses: actions/setup-node@v3
+    - uses: actions/setup-node@v4
       with:
         node-version-file: '.nvmrc'
-        registry-url: https://registry.npmjs.org
-        scope: '@inovex.de' # important for yarn
-        always-auth: true
-    - name: restore node_modules cache
-      uses: actions/cache@v3
-      id: node-cache
-      with:
-        path: '**/node_modules'
-        key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+        cache: yarn
+        cache-dependency-path: yarn.lock
     - name: restore nx cache
       uses: actions/cache@v3
       with:
@@ -31,6 +24,5 @@ runs:
         path: '**/.nx-cache'
         key: nx_cache-${{ github.ref_name || github.ref }}-build_core-${{ github.run_id }}
     - name: Install Dependencies
-      if: steps.node-cache.outputs.cache-hit != 'true'
       run: yarn install --frozen-lockfile
       shell: bash
