--- a/.github/workflows/dependencies-install/action.yml
+++ b/.github/workflows/dependencies-install/action.yml
@@ -5,11 +5,18 @@ author: 'Benjamin Pagelsdorf'
 runs:
   using: 'composite'
   steps:
-    - uses: actions/setup-node@v4
+    - uses: actions/setup-node@v3
       with:
         node-version-file: '.nvmrc'
-        cache: yarn
-        cache-dependency-path: yarn.lock
+        registry-url: https://registry.npmjs.org
+        scope: '@inovex.de' # important for yarn
+        always-auth: true
+    - name: restore node_modules cache
+      uses: actions/cache@v3
+      id: node-cache
+      with:
+        path: '**/node_modules'
+        key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
     - name: restore nx cache
       uses: actions/cache@v3
       with:
