trigger prerelease only on master

--- a/.github/workflows/deploy-prerelease.yml
+++ b/.github/workflows/deploy-prerelease.yml
@@ -2,6 +2,8 @@ name: 'Deploy Pre-Release'
 
 on:
   push:
+    branches:
+      - master
     paths:
       - packages/elements/**
       - packages/elements-angular/**
