chore: enhance release process (#1185)

--- a/.github/workflows/dependencies-install/action.yml
+++ b/.github/workflows/dependencies-install/action.yml
@@ -1,9 +1,9 @@
-name: "Install node dependencies"
-description: "Installs the node dependencies of inovex-elements packages"
+name: 'Install node dependencies'
+description: 'Installs the node dependencies of inovex-elements packages'
 author: 'Benjamin Pagelsdorf'
 
 runs:
-  using: "composite"
+  using: 'composite'
   steps:
     - uses: actions/setup-node@v3
       with:
@@ -31,6 +31,5 @@ runs:
         path: '**/.nx-cache'
         key: nx_cache-${{ github.ref_name || github.ref }}-build_core-${{ github.run_id }}
     - name: Install Dependencies
-      if: steps.node-cache.outputs.cache-hit != 'true'
       run: yarn install --frozen-lockfile
       shell: bash
