--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -1,20 +1,42 @@
 name: 'Deploy Release'
 
 on:
-  - workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      configuration:
+        description: 'Release mode'
+        required: true
+        default: release
+        type: choice
+        options:
+          - dryRun
+          - prerelease
+          - release
+      loglevel:
+        description: 'npm loglevel'
+        required: false
+        default: warn
+        type: choice
+        options:
+          - error
+          - warn
+          - notice
+          - verbose
 
 jobs:
   release:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    permissions:
+      contents: write # needed for GitHub releases
+    if: github.ref == 'refs/heads/master' || inputs.configuration == 'dryRun'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.PUSH_PAT }}
       - name: Track master branch to make nx affected work
-        run: |
-          git branch --track main origin/master
+        run: git branch --track main origin/master
       - uses: actions/setup-node@v3
         with:
           node-version-file: '.nvmrc'
@@ -26,11 +48,13 @@ jobs:
         run: |
           git config --global user.name "${{ github.actor }}"
           git config --global user.email "${{ github.actor}}@users.noreply.github.com"
+      - name: Set npm loglevel
+        run: npm config set loglevel ${{ inputs.loglevel }}
       - name: Build libs
         run: yarn run nx run-many -t build -p elements,elements-angular,elements-react,elements-vue
-      - name: Version
+      - name: Version and Release
         shell: bash
-        run: yarn nx run workspace:version
+        run: yarn nx run workspace:publish:${{ inputs.configuration }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
