--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "This is a Monorepo root package which is used to execute build scripts.",
   "engines": {
-    "node": ">=14.20"
+    "node": ">=18.10"
   },
   "scripts": {
     "start:storybook": "nx run-many --target=start --projects=storybook,elements --output-style=stream",
@@ -30,24 +30,27 @@
     "@angular/cli": "~15.1.0",
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
-    "@jscutlery/semver": "^4.1.0",
-    "@nx/angular": "17.1.2",
-    "@nx/eslint": "^17.1.2",
-    "@nx/eslint-plugin": "17.1.2",
-    "@nx/storybook": "17.1.2",
+    "@nx/angular": "17.3.0-beta.8",
+    "@nx/eslint": "17.3.0-beta.8",
+    "@nx/eslint-plugin": "17.3.0-beta.8",
+    "@nx/storybook": "17.3.0-beta.8",
+    "@types/conventional-recommended-bump": "^9.0.3",
     "@types/css-font-loading-module": "^0.0.7",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "26.0.24",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
+    "@types/shelljs": "^0.8.15",
+    "@typescript-eslint/eslint-plugin": "6.13.2",
+    "@typescript-eslint/parser": "6.13.2",
     "camelcase": "^6.2.0",
     "chalk": "^4.1.2",
+    "conventional-changelog-angular": "^7.0.0",
+    "conventional-recommended-bump": "^9.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-no-null": "^1.0.2",
-    "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.32.1",
     "fs-extra": "^9.0.0",
     "jest": "26.6.3",
     "jest-cli": "26.6.3",
@@ -55,13 +58,14 @@
     "lerna": "^5.5.2",
     "lint-staged": "^10.5.3",
     "ng-packagr": "~15.1.0",
-    "nx": "17.1.2",
+    "nx": "17.3.0-beta.8",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
     "prettier": "^2.1.2",
     "prompts": "^2.4.0",
+    "semver": "^7.5.4",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "svgo": "^2.8.0",
