--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start:landingpage": "nx run-many --target=start --projects=landingpage,elements-react,elements --output-style=stream",
     "start:landingpage:only": "nx run landingpage:start",
     "start:ui-patterns": "nx run ui-patterns:dev",
+    "start:test-app": "nx run test-app:serve",
     "---build---": "",
     "build": "nx run-many --target=build --output-style=stream",
     "build:core": "nx run elements:build",
@@ -38,6 +39,8 @@
     "test:screenshot": "nx run elements:test --configuration=screenshot",
     "test:playwright": "nx run test-app-e2e:e2e",
     "test:visualreact": "nx run elements-react-screenshot-e2e:e2e",
+    "test:all": "nx run elements:test --configuration=unit & nx run test-app-e2e:e2e & nx run elements-react-screenshot-e2e:e2e ",
+    "test:all-no-nx": "cd packages/elements && yarn stencil test --spec && cd .. && cd test-app-e2e && npx playwright test --config=playwright.config.ts  && cd .. && cd elements-react-screenshot-e2e && npx playwright test --config=playwright.config.ts ",
     "---lint-n-format---": "",
     "lint": "nx run-many --target=lint --output-style=stream",
     "lint:fix": "nx run-many --target=lint --configuration=fix --output-style=stream",
@@ -74,6 +77,7 @@
     "@angular/cli": "~15.1.0",
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
+    "@axe-core/playwright": "^4.8.2",
     "@nx/angular": "^17.1.3",
     "@nx/devkit": "17.1.3",
     "@nx/eslint": "^17.1.2",
