fix update version of root package.json

--- a/nx.json
+++ b/nx.json
@@ -37,6 +37,7 @@
   "cacheDirectory": ".nx-cache",
   "release": {
     "projects": [
+      "workspace",
       "elements",
       "elements-angular",
       "elements-react",
