--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -42,7 +42,8 @@
     "@inovex.de/elements": "^9.0.1",
     "lit": "^3.1.0",
     "lodash": "^4.17.21",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.6",
@@ -53,12 +54,18 @@
     "@mdx-js/react": "^1.6.22",
     "@pxtrn/storybook-addon-docs-stencil": "^6.4.0",
     "@storybook/addon-actions": "^7.6.6",
+    "@storybook/addon-docs": "^7.6.6",
     "@storybook/addon-essentials": "^7.6.6",
     "@storybook/addon-links": "^7.6.6",
+    "@storybook/addon-styling-webpack": "^0.0.6",
     "@storybook/addon-viewport": "^7.6.6",
     "@storybook/theming": "^7.6.6",
+    "@storybook/builder-vite": "^7.6.6",
+    "@storybook/blocks": "^7.6.6",
+    "@storybook/manager-api": "^7.6.6",
     "@storybook/web-components": "^7.6.6",
     "@storybook/web-components-webpack5": "^7.6.6",
+    "@storybook/web-components-vite": "^7.6.6",
     "@types/node": "^16.0.0",
     "babel-loader": "8.2.5",
     "chalk": "^2.4.2",
