--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-storybook": "^0.6.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "storybook": "^7.6.4",
     "typescript": "^4.5.5"
   }
 }
