--- a/packages/storybook/project.json
+++ b/packages/storybook/project.json
@@ -13,23 +13,23 @@
       "executor": "nx:run-commands",
       "options": {
         "cwd": "packages/storybook",
-        "command": "build-storybook -c config -o dist",
         "color": true
+      },
+      "defaultConfiguration": "dev",
+      "configurations": {
+        "dev": {
+          "command": "storybook build -c config -o dist"
+        },
+        "prod": {
+          "command": "storybook build -c config --quiet -o dist"
+        }
       }
     },
     "start": {
       "executor": "nx:run-commands",
       "options": {
-        "cwd": "packages/storybook"
-      },
-      "defaultConfiguration": "dev",
-      "configurations": {
-        "dev": {
-          "command": "start-storybook -p 6006 -c config --quiet --no-version-updates"
-        },
-        "prod": {
-          "command": "start-storybook -p 6006 -c config --quiet --no-version-updates"
-        }
+        "cwd": "packages/storybook",
+        "command": "storybook dev -p 6006 -c config"
       }
     },
     "lint": {
