--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,5 +1,8 @@
 {
-  "!(*eslintrc)!{packages/landingpage/**}.{t,j}s{,x}": ["prettier --write", "eslint --fix"],
+  "!(*eslintrc)!{packages/landingpage/**}.{t,j}s{,x}": [
+    "prettier --write",
+    "eslint --fix"
+  ],
   "*.{md,html,css,scss}": "prettier --write",
   "*.{svg}": "svgo --config ./svgo.config.js"
 }
