--- a/packages/elements/tsconfig.lib.json
+++ b/packages/elements/tsconfig.lib.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "esnext",
+    "module": "esnext"
   },
   "include": ["src"],
   "exclude": ["**/*.spec.ts", "**/*.spec.tsx"]
