--- a/packages/elements-react/tsconfig.json
+++ b/packages/elements-react/tsconfig.json
@@ -5,9 +5,7 @@
     "lib": ["dom", "es2018"],
     //"declarationDir": "../../dist/elements-react/dist/types",
     "skipLibCheck": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ]
+    "typeRoots": ["node_modules/@types"]
   },
   "references": [
     {
