--- a/packages/elements-vue/tsconfig.json
+++ b/packages/elements-vue/tsconfig.json
@@ -6,9 +6,7 @@
     "declarationDir": "dist/types",
     "strict": false,
     "skipLibCheck": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ]
+    "typeRoots": ["node_modules/@types"]
   },
   "references": [
     {
