--- a/packages/elements/tsconfig.json
+++ b/packages/elements/tsconfig.json
@@ -11,7 +11,7 @@
     "noImplicitAny": false,
     "jsxFactory": "h",
     "types": ["jest"],
-    "skipLibCheck": true,
+    "skipLibCheck": true
   },
   "references": [
     {
