ci: suppress NX unknown cache error

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,12 +22,20 @@ jobs:
         uses: ./.github/workflows/dependencies-install
       - name: Check format
         run: yarn format
+        env:
+          NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
       - name: Check lint
         run: yarn lint
+        env:
+          NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
       - name: Build all projects
         run: yarn build
+        env:
+          NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
       - name: Test all projects
         run: yarn test
+        env:
+          NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
       - name: Upload build artifacts for canary release
         uses: ./.github/workflows/artifacts-upload
         with:
