--- a/packages/ui-patterns-playground/package.json
+++ b/packages/ui-patterns-playground/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "dependencies": {
     "@inovex.de/elements-react": "^9.0.1",
+    "@inovex.de/ui-patterns": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@inovex.de/ui-patterns": "^9.0.1"
+    "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
