--- a/.github/workflows/deploy-prerelease.yml
+++ b/.github/workflows/deploy-prerelease.yml
@@ -49,6 +49,8 @@ jobs:
         run: npm config set loglevel warn
       - name: Build libs
         run: yarn run nx run-many -t build -p elements,elements-angular,elements-react,elements-vue
+        env:
+          NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
       - name: Version & Release
         shell: bash
         run: yarn nx run workspace:publish:prerelease
