--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -14,6 +14,8 @@ jobs:
       - run: npm config set scripts-prepend-node-path true
       - name: Build Storybook
         run: yarn nx run storybook:build
+        env:
+          NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
       - name: Upload Storybook artifact
         uses: ./.github/workflows/artifacts-upload
         with:
