--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
     "@nx/angular": "17.3.0-beta.8",
+    "@nx/devkit": "^18.0.1",
     "@nx/eslint": "17.3.0-beta.8",
     "@nx/eslint-plugin": "17.3.0-beta.8",
+    "@nx/playwright": "17.3.0-beta.8",
     "@nx/storybook": "17.3.0-beta.8",
+    "@playwright/test": "^1.36.0",
     "@types/conventional-recommended-bump": "^9.0.3",
     "@types/css-font-loading-module": "^0.0.7",
     "@types/fs-extra": "^9.0.13",
@@ -49,6 +52,7 @@
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-no-null": "^1.0.2",
+    "eslint-plugin-playwright": "^0.15.3",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.32.1",
     "fs-extra": "^9.0.0",
