chore: update configurations

--- a/packages/storybook/project.json
+++ b/packages/storybook/project.json
@@ -61,8 +61,7 @@
       "outputs": ["{workspaceRoot}/dist/.playwright/packages/storybook"],
       "options": {
         "config": "packages/storybook/playwright.config.ts",
-        "browser": "chromium",
-        "skipInstall": true
+        "browser": "chromium"
       },
       "defaultConfiguration": "headless",
       "configurations": {
