--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Store Playwright's Version
         run: |
-          PLAYWRIGHT_VERSION=$(npx playwright -V | awk '{ print $2 }')
+          PLAYWRIGHT_VERSION=$(yarn playwright -V | awk '{ print $2 }')
           echo "Playwright's Version: $PLAYWRIGHT_VERSION"
           echo "PLAYWRIGHT_VERSION=$PLAYWRIGHT_VERSION" >> $GITHUB_ENV
       - name: Cache Playwright Browsers for Playwright's Version
@@ -34,7 +34,7 @@ jobs:
           key: playwright-browsers-${{ env.PLAYWRIGHT_VERSION }}
       - name: Setup Playwright
         if: steps.cache-playwright-browsers.outputs.cache-hit != 'true'
-        run: npx playwright install --with-deps
+        run: yarn playwright install --with-deps
 
       - name: Check format
         run: yarn format
