--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
     "@nx/angular": "17.3.0-beta.8",
-    "@nx/devkit": "^18.0.1",
+    "@nx/devkit": "17.3.0-beta.8",
     "@nx/eslint": "17.3.0-beta.8",
     "@nx/eslint-plugin": "17.3.0-beta.8",
     "@nx/playwright": "17.3.0-beta.8",
