--- a/packages/storybook/project.json
+++ b/packages/storybook/project.json
@@ -55,6 +55,23 @@
           "command": "shx rm -rf node_modules"
         }
       }
+    },
+    "test": {
+      "executor": "@nx/playwright:playwright",
+      "outputs": ["{workspaceRoot}/dist/.playwright/packages/storybook"],
+      "options": {
+        "config": "packages/storybook/playwright.config.ts",
+        "browser": "chromium"
+      },
+      "defaultConfiguration": "headless",
+      "configurations": {
+        "headless": {
+          "headed": false
+        },
+        "headed": {
+          "headed": true
+        }
+      }
     }
   }
 }
