--- a/packages/ui-patterns/package.json
+++ b/packages/ui-patterns/package.json
@@ -14,13 +14,11 @@
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -34,7 +32,7 @@
   },
   "peerDependencies": {
     "@inovex.de/elements-react": "^9.0.0",
-    "react": "18.x",
-    "react-dom": "18.x"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
