--- a/packages/elements-angular/tsconfig.lib.prod.json
+++ b/packages/elements-angular/tsconfig.lib.prod.json
@@ -5,5 +5,6 @@
   },
   "angularCompilerOptions": {
     "compilationMode": "partial"
-  }
+  },
+  "files": ["src/index.ts", "standalone/src/index.ts"]
 }
