test(elements/ino-checkbox): add tests

--- a/packages/storybook/project.json
+++ b/packages/storybook/project.json
@@ -68,8 +68,12 @@
         "headless": {
           "headed": false
         },
-        "headed": {
-          "headed": true
+        "ui": {
+          "ui": true
+        },
+        "debug": {
+          "headed": true,
+          "debug": true
         }
       }
     }
