test(elements|ino-checkbox): add tests (#1241)
* test(elements/ino-checkbox): add tests

* formatter

* update timeout

* formatter

--- a/packages/storybook/project.json
+++ b/packages/storybook/project.json
@@ -61,15 +61,20 @@
       "outputs": ["{workspaceRoot}/dist/.playwright/packages/storybook"],
       "options": {
         "config": "packages/storybook/playwright.config.ts",
-        "browser": "chromium"
+        "browser": "chromium",
+        "timeout": 15000
       },
       "defaultConfiguration": "headless",
       "configurations": {
         "headless": {
           "headed": false
         },
-        "headed": {
-          "headed": true
+        "ui": {
+          "ui": true
+        },
+        "debug": {
+          "headed": true,
+          "debug": true
         }
       }
     }
