--- a/packages/storybook/project.json
+++ b/packages/storybook/project.json
@@ -9,27 +9,29 @@
   },
   "targets": {
     "build": {
-      "outputs": ["{projectRoot}/dist"],
-      "executor": "nx:run-commands",
+      "executor": "@nx/storybook:build",
       "options": {
-        "cwd": "packages/storybook",
-        "color": true
+        "configDir": "{projectRoot}/config",
+        "outputDir": "{projectRoot}/dist",
+        "disableTelemetry": true
       },
       "defaultConfiguration": "dev",
       "configurations": {
         "dev": {
-          "command": "storybook build -c config -o dist"
+          "quiet": false
         },
         "prod": {
-          "command": "storybook build -c config --quiet -o dist"
+          "quiet": true
         }
       }
     },
     "start": {
-      "executor": "nx:run-commands",
+      "executor": "@nx/storybook:storybook",
       "options": {
-        "cwd": "packages/storybook",
-        "command": "storybook dev -p 6006 -c config"
+        "port": 6006,
+        "configDir": "{projectRoot}/config",
+        "outputDir": "{projectRoot}/dist",
+        "disableTelemetry": true
       }
     },
     "lint": {
