deps: remove lerna dependency (#1174)
* update lerna to latest version and run lerna repair

* format nx.json

* remove lerna as dependency

* update lock file after rebasing

--- a/nx.json
+++ b/nx.json
@@ -10,13 +10,21 @@
   "targetDefaults": {
     "build": {
       "dependsOn": ["^build"],
-      "cache": true
+      "cache": true,
+      "inputs": ["production", "^production"]
     },
     "test": {
-      "cache": true
+      "cache": true,
+      "inputs": ["default", "^production"]
     },
     "lint": {
-      "cache": true
+      "cache": true,
+      "inputs": [
+        "default",
+        "^production",
+        "{projectRoot}/.eslintrc.json",
+        "{workspaceRoot}/.eslintrc.json"
+      ]
     }
   },
   "generators": {
@@ -61,5 +69,13 @@
     "version": {
       "conventionalCommits": true
     }
+  },
+  "namedInputs": {
+    "default": ["{projectRoot}/**/*", "sharedGlobals"],
+    "sharedGlobals": [
+      "{workspaceRoot}/tsconfig.json",
+      "{workspaceRoot}/tsconfig.base.json"
+    ],
+    "production": ["default", "!{projectRoot}/**/*.e2e.ts"]
   }
 }
